[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.0"
prettytable = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
chrono = "0.4.26"
serde_json = "1.0.104"
clap = { version = "4.2.1", features = ["cargo", "derive"] }
